--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<title>AngularJS</title>
 		<script type="text/javascript" src="./dist/bundle.js"></script>
 	</head>
-	<body>
-		<h1>LOL</h1>
+	<body ng-app> 
+
+		<h1>{{1 + 1}}</h1>
 	</body>
 </html>
